# OBD_Dash

./: .gitignore  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/bsp/: CMakeLists.txt  i2c_io.c  i2c_io.h  lvgl_port.h  sd_card.c  sd_card.h  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
components/dpool/: CMakeLists.txt  dpool.c  dpool.h  wrapper.cpp  wrapper.h
components/hmi/: CMakeLists.txt  OBD_Dash.eez-project  OBD_Dash.eez-project-ui-state
components/hmi/src/ui/: screens.c  screens.h  ui.c  ui.h  vars.h
components/sdcard/: CMakeLists.txt  sd_card.h
main/: CMakeLists.txt  Kconfig.projbuild  lvgl_port.c  lvgl_port.h  main.c  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
